@@ -1,0 +1,15 @@
+{
+  "images" : [
+    {
+      "filename" : "icon-tab-mysite.pdf",
+      "idiom" : "universal"
+    }
+  ],
+  "info" : {
+    "author" : "xcode",
+    "version" : 1
+  },
+  "properties" : {
+    "template-rendering-intent" : "template"
+  }
+}
