@@ -1,0 +1,81 @@
+%PDF-1.7
+
+1 0 obj
+  << >>
+endobj
+
+2 0 obj
+  << /Length 3 0 R >>
+stream
+/DeviceRGB CS
+/DeviceRGB cs
+q
+1.000000 0.000000 -0.000000 1.000000 0.000000 0.000000 cm
+0.000000 0.000000 0.000000 scn
+12.000000 24.000000 m
+5.388957 24.000000 0.000000 18.625767 0.000000 12.000000 c
+0.000000 5.374233 5.374233 0.000000 12.000000 0.000000 c
+18.625767 0.000000 24.000000 5.374233 24.000000 12.000000 c
+24.000000 18.625767 18.625767 24.000000 12.000000 24.000000 c
+h
+11.381595 10.012270 m
+5.403681 10.012270 l
+11.381595 21.644173 l
+11.381595 10.012270 l
+h
+12.603682 2.385273 m
+12.603682 14.017175 l
+18.566872 14.017175 l
+12.603682 2.385273 l
+h
+f
+n
+Q
+
+endstream
+endobj
+
+3 0 obj
+  564
+endobj
+
+4 0 obj
+  << /Annots []
+     /Type /Page
+     /MediaBox [ 0.000000 0.000000 24.000000 24.000000 ]
+     /Resources 1 0 R
+     /Contents 2 0 R
+     /Parent 5 0 R
+  >>
+endobj
+
+5 0 obj
+  << /Kids [ 4 0 R ]
+     /Count 1
+     /Type /Pages
+  >>
+endobj
+
+6 0 obj
+  << /Pages 5 0 R
+     /Type /Catalog
+  >>
+endobj
+
+xref
+0 7
+0000000000 65535 f
+0000000010 00000 n
+0000000034 00000 n
+0000000654 00000 n
+0000000676 00000 n
+0000000849 00000 n
+0000000923 00000 n
+trailer
+<< /ID [ (some) (id) ]
+   /Root 6 0 R
+   /Size 7
+>>
+startxref
+982
+%%EOF
