@@ -30,7 +30,7 @@ extension AppStyleGuide {
 
 // MARK: - Images
 extension AppStyleGuide {
-    static let mySiteTabIcon = UIImage.gridicon(.house)
+    static let mySiteTabIcon = UIImage(named: "icon-tab-mysites")
     static let aboutAppIcon = UIImage(named: "jetpack-install-logo")
     static let quickStartExistingSite = UIImage(named: "wp-illustration-quickstart-existing-site-jetpack")
 }
