@@ -4,6 +4,7 @@
 * [*] Reader: Change the following button cog icon. [#20274]
 * [*] [Jetpack-only] Change the dark background color of toolbars and top tabs across the whole app. [#20278]
 * [*] Change the Reader's navigation bar background color to match other screens. [#20278]
+* [*] [Jetpack-only] Change My Sites tab bar icon. [#20310]
 * [*] [internal] Refactored the Core Data operations (saving the site data) after a new site is created. [#20270]
 * [*] [internal] Refactored updating user role in the "People" screen on the "My Sites" tab. [#20244]
 * [*] [internal] Refactor managing social connections and social buttons in the "Sharing" screen. [#20265]
